# q2sfx

./: .gitignore  README.md  build.ps1  pyproject.toml
q2sfx/: __init__.py  __main__.py  build.py  builder.py
q2sfx/assets/: main.go
tests/: test_app.py  test_builder.py  test_builder_pytest.py  test_cli.py  test_integration_build.py
