[tool.poetry]
name = "q2sfx"
version = "0.1.0"
description = "Python-to-exe SFX builder using PyInstaller"
authors = ["Andrei Puchko <andrei.puchko@gmx.de>"]
readme = "README.md"
license = "MIT"
keywords = ["pyinstaller", "sfx", "installer"]

[tool.poetry.dependencies]
python = ">=3.8.1, <3.13"
pyinstaller = "^6.0.0"  # runtime dependency

[tool.poetry.scripts]
build_sfx = "q2sfx.build:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
